# cuda-finder

./: Cargo.toml  Readme.md
.cargo/: config.toml
.github/workflows/: rust.yml
projects/cuda-finder/: Cargo.toml  Readme.md
projects/cuda-finder/src/: lib.rs
projects/cuda-finder/src/cu_tools/: cuda.rs  cudnn.rs  mod.rs
projects/rocm-finder/: Cargo.toml
projects/rocm-finder/src/: lib.rs
projects/tensor-cuda-sys/: Cargo.toml
projects/tensor-cuda-sys/src/: lib.rs
projects/tensor-sys/: Cargo.toml  Readme.md  build.rs
projects/tensor-sys/src/: lib.rs
projects/tensor-sys/src/windows/: mod.rs
