[package]
name = "tensor-sys"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
libc = "0.2.140"
pkg-config = "0.3.26"

[dev-dependencies]


#
#[build-dependencies.cuda-finder]
##version = "0.0.0"
#bindgen = "0.64.0"
#path = "../cuda-finder"



[features]
default = []
dynamic-link = []
