[package]
name = "tensor-sys"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
libc = "0.2.140"


[dev-dependencies]

[build-dependencies.cuda-finder]
#version = "0.0.0"
path = "../cuda-finder"
optional = true

[build-dependencies.rocm-finder]
#version = "0.0.0"
path = "../rocm-finder"
optional = true

[features]
default = []
cuda = ["cuda-finder"]
cudnn = ["cuda-finder"]
tensorrt = ["cuda-finder"]
cublas = ["cuda-finder"]
rocm = []
opencl = []
dynamic-link = []
